Proyecto definitivo (espero) Se actualizaron la mayoria de clases, para asi admitir el uso de JWT, a la vez que se actualizó los url y varias de las funciones